--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ p {
 
 .box {
   background-color: #fff;
-  box-shadow: 0 10px 20px rgba(0,0,0, 0.05), 0 6px 6px rgba(0,0,0,0.1);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   position: relative;
   overflow: hidden;
@@ -59,10 +59,6 @@ p {
   left: 0;
   height: 5px;
   width: 100%;
-}
-
-.box-cyan::after {
-  background-color: hsl(180, 62%, 55%);
 }
 
 .box-cyan::after {
@@ -105,7 +101,6 @@ p {
   font-size: 11px;
   text-align: center;
 }
-
 .attribution a {
   color: hsl(228, 45%, 44%);
   text-decoration: none;
